--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,6 +6,39 @@
     "configurations": [
         {
             "type": "java",
+            "name": "Launch sqrtoftwo",
+            "request": "launch",
+            "mainClass": "sqrtoftwo",
+            "projectName": "Stuff_ecbce1ac"
+        },
+        {
+            "name": "(gdb) Launch",
+            "type": "cppdbg",
+            "request": "launch",
+            "program": "${fileDirname}\\${fileBasenameNoExtension}.exe",
+            "args": [],
+            "stopAtEntry": false,
+            "cwd": "${fileDirname}",
+            "environment": [],
+            "externalConsole": false,
+            "MIMode": "gdb",
+            "console": "externalTerminal",
+            "miDebuggerPath": "C:\\msys64\\mingw64\\bin\\gdb.exe",
+            "setupCommands": [
+                {
+                    "description": "Enable pretty-printing for gdb",
+                    "text": "-enable-pretty-printing",
+                    "ignoreFailures": true
+                },
+                {
+                    "description": "Set Disassembly Flavor to Intel",
+                    "text": "-gdb-set disassembly-flavor intel",
+                    "ignoreFailures": true
+                }
+            ]
+        },
+        {
+            "type": "java",
             "name": "Launch calculator",
             "request": "launch",
             "mainClass": "calculator",
